Add links to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
             <input type='password' placeholder='password'>
           </div>
           <div class='large-2 medium-2 small-2 columns'>
-            <%= link_to 'Post', '#', class: 'default button expan' %>
+            <%= link_to 'Post', new_course_path, class: 'default button expan' %>
           </div>
         </div>
       </li>
