--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,6 @@
  *
  *= require_self
  *= require foundation_and_overrides
-
+ *= require dataTables/jquery.dataTables.foundation
  *= require_tree .
  */
