Add padding from header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <div class='row'>
+    <div class='row main'>
       <%= yield %>
     </div>
     <%= javascript_include_tag 'application' %>
