--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,1 +1,37 @@
-View a course
+<div class='large-12 large-offset-0 medium-12 medium-offset-0 small-12 small-offset-0 columns'>
+  <div class='panel callout radius text-center'>
+    <h5><b><%= @course.name %></b> | <%= link_to @course.school, @course.url, target: '_blank' %></h5>
+  </div>
+  <ul class='vcard panel radius large-12 medium-12 small-12'>
+    <li><%= @course.course_id %> | <b><%= case @course.started when true then 'Started' else 'Not Started' end %></b></li>
+    <li class='description'><%= @course.description %></li>
+  </ul>
+  <ul class='vcard large-12 medium-12 small-12'>
+    <% if @course.notes.blank? %>
+      <li>No notes added...</li>
+    <% else %>
+      <% @course.notes.each do |note| %>
+        <li>
+          <span class='delete'><%= link_to 'X', note, method: :delete %></span>
+          <span class='muted'><%= note.created_at.strftime('%m/%d') %></span>
+           | <%= note.content %>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
+  <%= form_for @note do |f| %>
+    <div class='row'>
+      <div class='large-12 columns'>
+        <div class='row collaspe'>
+          <div class='small-10 columns'>
+            <%= f.text_area :content, rows:2, placeholder: 'Add a new note...' %>
+            <%= f.hidden_field :course_id, value: @course.id %>
+          </div>
+          <div class='small-2 columns'>
+            <%= f.submit '+', class: 'default button expand' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
