--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,7 @@
 <div class='large-12 large-offset-0 medium-12 medium-offset-0 small-12 small-offset-0 columns'>
+  <div class='panel callout radius text-center'>
+    <h5>My<b>Web</b>Ed | Tracking your Progess through Online Education Programs</h5>
+  </div>
   <table id='courses' class='display'>
     <thead>
       <tr>
