--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,6 +1,7 @@
 <div class='large-12 large-offset-0 medium-12 medium-offset-0 small-12 small-offset-0 columns'>
-  <h3>Add a New Course</h3>
-
+  <div class='panel callout radius text-center'>
+    <h5>My<b>Web</b>Ed | Add a New Course</h5>
+  </div>
   <%= form_for @course do |f| %>
     <div class='row collapse'>
       <div class='small-3 large-2 columns'>
