--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -48,6 +48,15 @@
       </div>
     </div>
 
+    <div class='row collapse'>
+      <div class='small-3 large-2 columns'>
+        <span class='prefix'>Started</span>
+      </div>
+      <div class='small-9 large-10 columns'>
+        <%= f.select :started, [['Yes', true], ['No', false]]%>
+      </div>
+    </div>
+
     <div class='row'>
       <div class='large-8 columns'>
         <div class='row collapse'>
