Add delete button

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -62,6 +62,7 @@
         <div class='row collapse'>
           <div class='small-3 columns'>
             <%= f.submit 'Update', class: 'default button expand' %>
+            <%= link_to 'Delete', @course, method: :delete, class: 'alert button' %>
           </div>
         </div>
       </div>
