--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
   <section class='top-bar-section' style='left: 0%'>
     <ul class='right'>
       <div class='large-2 medium-2 small-2 columns'>
-        <%= link_to 'Post', new_course_path, class: 'default button expan' %>
+        <%= link_to 'Post', new_course_path, class: 'default button' %>
       </div>
     </ul>
   </section>
