--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,7 +15,7 @@
         <tr>
           <td class='large-6 medium-6 small-6'><%= link_to c.name, course_path(c.id) %></td>
           <td class='large-5 medium-5 small-5'><%= link_to c.school, c.url, target: '_blank' %></td>
-          <td class='large-1 medium-1 small-1'><%= case c.started when 't' then 'Yes' else 'No' end %></td>
+          <td class='large-1 medium-1 small-1'><%= case c.started when true then 'Yes' else 'No' end %></td>
         </tr>
       <% end %>
     </tbody>
