--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -14,6 +14,15 @@
 
     <div class='row collapse'>
       <div class='small-3 large-2 columns'>
+        <span class='prefix'>Site</span>
+      </div>
+      <div class='small-9 large-10 columns'>
+        <%= f.text_field :site, placeholder: 'Coursera' %>
+      </div>
+    </div>
+
+    <div class='row collapse'>
+      <div class='small-3 large-2 columns'>
         <span class='prefix'>School</span>
       </div>
       <div class='small-9 large-10 columns'>
