--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,6 @@
 <div class='large-12 large-offset-0 medium-12 medium-offset-0 small-12 small-offset-0 columns'>
   <div class='panel callout radius text-center'>
-    <h5><b><%= @course.name %></b> | <%= link_to @course.school, @course.url, target: '_blank' %></h5>
+    <h5><b><%= @course.name %></b> | <%= link_to school_name_and_site(@course), @course.url, target: '_blank' %></h5>
   </div>
   <ul class='vcard panel radius large-12 medium-12 small-12'>
     <li><%= link_to 'Edit', edit_course_path(@course.id) %> | <b><%= case @course.started when true then 'Started' else 'Not Started' end %></b></li>
