--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -62,7 +62,7 @@
         <span class='prefix'>Started</span>
       </div>
       <div class='small-9 large-10 columns'>
-        <%= f.select :started, [['Have you started the course yet?', nil], ['Yes', true], ['No', false]]%>
+        <%= f.select :started, [['Have you started the course yet?', nil], ['Yes', 'Yes'], ['No', 'No'], ['Completed', 'Completed']]%>
       </div>
     </div>
 
