--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -17,7 +17,7 @@
           <td class='large-1 medium-1 small-1'><%= c.site %></td>
           <td class='large-5 medium-5 small-5'><%= link_to c.name, course_path(c.id) %></td>
           <td class='large-5 medium-5 small-5'><%= link_to c.school, c.url, target: '_blank' %></td>
-          <td class='large-1 medium-1 small-1'><%= c.started ? 'Yes' : 'No' %></td>
+          <td class='large-1 medium-1 small-1'><%= c.started %></td>
         </tr>
       <% end %>
     </tbody>
